[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyLMD"
version = "0.1.1"
description = "GPU-accelerated Localized Marker Detector (LMD) for Python"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    'anndata==0.11.4'
    'Cython'
    'matplotlib==3.10.3'
    'numba==0.61.2'
    'numpy==2.2.6'
    'pandas'
    'scanpy==1.11.2'
    'scikit-image==0.25.2'
    'scikit-learn'
    'scipy==1.15.3'
    'seaborn'
    'umap-learn==0.5.7'
]

[project.optional-dependencies]
gpu = [
    'cuda-python'
    'cudf'
    'cugraph'
    'cuml'
    'cupy'
    'rapids_singlecell==0.12.6'
]
