[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyLMD"
version = "0.1.0"
description = "GPU-accelerated Localized Marker Detector (LMD) for Python"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
  "networkx>=2.8",
  "typing-extensions>=4.6"
]

[project.optional-dependencies]
gpu = [
  "cupy-cuda11x; platform_system != 'Windows'",
  "cuml-cu11; platform_system != 'Windows'",
  "cugraph-cu11; platform_system != 'Windows'"
]
